<resources>
    <string name="app_name">Chapter 4 Topic 1</string>
    <string name="balok_title">Aplikasi Volume Balok</string>
    <string name="berita_title">Aplikasi Berita</string>
    <string name="student_title">Aplikasi Student</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="tinggi">Tinggi</string>
    <string name="hitung">Hitung</string>
    <string name="hasil_hitung">Hasil Hitung</string>
    <string name="volume_balok">VOLUME BALOK</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="tanggal_berita">Tanggal Berita</string>
    <string name="data_image">Data Image</string>
    <string name="nama">NAMA</string>
    <string name="nim">NIM</string>
    <string name="nama_jurnalis">Nama Jurnalis</string>
    <string name="isi_berita">Isi Berita</string>
</resources>